# lumina

./: .dockerignore  .env.docker  .env.example  .gitignore  AI 营销助手产品方案（V2.0 - Orchestra架构）.docx  AI 营销助手产品方案（V3.0 Orchestra 架构版）.docx  AI营销助手产品方案V4.md  DEVELOPMENT_PLAN.md  DOCKER_SETUP_SUMMARY.md  Development_Plan_v3_Integrated.md  Development_plan_v2.md  Dockerfile  Dockerfile.local  IMPLEMENTATION_REPORT.md  LICENSE  LOCAL_SETUP_GUIDE.md  PRODUCT_SOLUTION_PLAN.md  PROJECT_REFACTOR_SUMMARY.md  QUICKSTART.md  README.md  aida_test_output.txt  chatgpt.txt  deepseek.txt  docker-compose.local.yml  docker-compose.yml  gemini.txt  matrix_test_output.txt  pyproject.toml  pytest_final2_stdout.txt  pytest_final_stdout.txt  pytest_full_stdout.txt  pytest_stdout.txt  test_bulk_creative_methodology.py  test_compliance_platform_rules.py  test_content_formats_integration.py  test_content_strategist_platform_spec.py  test_methodology_usage.py  test_output.txt  test_output2.txt  test_output3.txt  (+3 more)
config/: agents.yaml  intent_rules.yaml  llm.yaml
docs/: 4.22_API_REFERENCE.md  ACCOUNT_CRAWLER.md  API_SERVICES_INTEGRATION.md  API_SERVICES_QUICKSTART.md  API_USAGE_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_ADJUSTMENT_PROPOSAL.md  ARCHITECTURE_ADJUSTMENT_SUMMARY.md  CORE_ARCHITECTURE.md  CROSS_PLATFORM_CONTENT_GENERATION.md  DEMO_WORKBENCH_REQUIREMENTS.md  DEVELOPMENT_PLAN_RGA.md  DOCKER_DEPLOYMENT.md  DOCKER_LOCAL.md  INTEGRATION_OPENCLAW.md  LOCAL_DEVELOPMENT.md  PHASE1_IMPLEMENTATION.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  QRCODE_LOGIN_GUIDE.md  (+5 more)
(+130 files in other folders)
